design #hero element

--- a/index.html
+++ b/index.html
@@ -28,14 +28,14 @@
         </ul>
     <nav>
     </header>
-    <main>
+    <div class="hero-container">
         <section id="hero">
             <h3>For more information about this product please visit official <a href"https://www.samsung.com/us/smartphones/galaxy-z-fold5/" id="z-fold-specs">Samsung Galaxy Z Fold 5</a> page
             </h3>
             <h3>
                 For more newsletters about latest technology please type your email address
             </h3>
-            <form id="form" action="https://www.freecodecamp.com/email-submit">
+            <form id="form">
                 <input
                     name="email"
                     id="email"
@@ -46,6 +46,8 @@
                 <input id="submit" type="submit" value="Submit" class="btn" />
             </form>
         </section>
+    </div>
+    <main>
         <section id="Features">
             <div class="grid">
                 <div class="block">
